        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=22200
        Crash when close event is dispatched to MessagePort due to document destruction

        Test: fast/events/message-port-onclose.html

        * dom/MessagePort.cpp: (WebCore::MessagePort::contextDestroyed):
        Don't dispatch close event, even though HTML5 currently says that we should. It is not
        right for GC to have observable effects.



Canonical link: https://commits.webkit.org/30580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38366 268f45cc-cd09-0410-ab3c-d52691b4dbfc